[gd_scene load_steps=9 format=3 uid="uid://b8ja3qoy8ksw3"]

[ext_resource type="Script" uid="uid://ck5smn3hderwk" path="res://Sprites/pickup.gd" id="1_18vre"]

[sub_resource type="Curve" id="Curve_r7rua"]
bake_resolution = 25
_data = [Vector2(0.279412, 1), 0.0, 0.0, 0, 0, Vector2(0.654412, 0.224719), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_qmhgc"]
curve = SubResource("Curve_r7rua")

[sub_resource type="Gradient" id="Gradient_0wx5y"]
offsets = PackedFloat32Array(0.290909, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_w0ruh"]
gradient = SubResource("Gradient_0wx5y")
use_hdr = true

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_77xhb"]
particle_flag_disable_z = true
emission_shape = 2
emission_sphere_radius = 2.0
angle_min = -80.0
angle_max = 75.0
direction = Vector3(0, 0, 0)
spread = 81.325
flatness = 0.241
initial_velocity_min = 30.0
initial_velocity_max = 50.0
angular_velocity_min = -20.0
angular_velocity_max = 50.0
gravity = Vector3(0, -200, 0)
color = Color(0.501615, 0.000523278, 0.582109, 1)
color_ramp = SubResource("GradientTexture1D_w0ruh")
alpha_curve = SubResource("CurveTexture_qmhgc")
turbulence_enabled = true
turbulence_noise_strength = 5.0
turbulence_noise_scale = 8.0
turbulence_noise_speed_random = 0.56
turbulence_influence_max = 0.283
turbulence_initial_displacement_min = -35.5
turbulence_initial_displacement_max = 20.8

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_8sugg"]
polygon = PackedVector2Array(-20, 9, 22, 9, 49, 20, -47, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_46onf"]

[node name="BasePickup" type="Area2D"]
collision_layer = 512
collision_mask = 16
monitorable = false
script = ExtResource("1_18vre")

[node name="PickupParticles" type="GPUParticles2D" parent="."]
emitting = false
amount = 10
lifetime = 2.5
one_shot = true
explosiveness = 1.0
fixed_fps = 12
trail_sections = 2
trail_section_subdivisions = 2
process_material = SubResource("ParticleProcessMaterial_77xhb")

[node name="LightOccluder2D" type="LightOccluder2D" parent="PickupParticles"]
occluder = SubResource("OccluderPolygon2D_8sugg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_46onf")

[node name="PickupNoise" type="AudioStreamPlayer" parent="."]
bus = &"Effects"

[node name="WorthLabel" type="RichTextLabel" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -8.0
offset_right = 20.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7, 0.7)
size_flags_horizontal = 6
size_flags_vertical = 6
bbcode_enabled = true
text = "test"
fit_content = true
scroll_active = false
autowrap_mode = 0
shortcut_keys_enabled = false
meta_underlined = false
hint_underlined = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="finished" from="PickupParticles" to="." method="_on_pickup_particles_finished"]
